# replay

./: .gitignore  GITHUB_GUIDE.md  LICENSE  README.md  Replay-Chromium录制层架构分析.md  Replay.io架构分析文档.md  Replay重放机制与断点调试原理.md  V8引擎插桩实现原理.md  commit-to-github.sh  package.json  replay-architecture.html  replay-node-reverse-engineering.md  云端回放架构设计.md  实现最小录制工具方案.md  开发状态报告.md
.claude/: settings.local.json
open-replay/: ARCHITECTURE.md  README.md  ROADMAP.md  apply-patches.sh  package.json  setup-node.sh
open-replay/browser/: .gitignore  困难记录.md  开发日志.md  架构.md  说明.md  路线图.md
open-replay/cli/: package.json
open-replay/devtools/: index.html  package.json
open-replay/docs/: CDP_PROTOCOL_COMPARISON.md  REPLAY_CDP_PROTOCOL.md  TIME_TRAVEL_COMPARISON.md
open-replay/driver/: CMakeLists.txt  build.sh
open-replay/driver/src/: driver.cc  driver.h  raw_syscall.h
open-replay/driver/src/checkpoint/: checkpoint.cc  checkpoint.h
open-replay/driver/src/format/: recording.cc  recording.h
open-replay/driver/src/intercept/: common.h  fs.cc  net.cc  random.cc  thread.cc  time.cc
open-replay/driver/tests/: test_complex_app.js  test_driver.cc  test_express_app.js  test_full_comparison.js  test_integration.sh  test_node_network.js  test_node_record.js
open-replay/patches/: apply_patches.py
open-replay/server/: package.json
replay-github/: clash-config.yaml
v8-recorder/: EXPECTED_OUTPUT.md  PROJECT_SUMMARY.md  PROXY.md  PROXY_QUICKSTART.md  PYTHON313_FIX.md  README.md  USAGE.md  analyze.py  build-intercept.sh  build.sh  compile-examples.sh  demo.sh  demo.v8rec  demo2.v8rec  demo3.v8rec  demo4.js  demo4.v8rec  fix-python313.sh  output.v8rec  proxy.sh  record.sh  setup.sh  test.sh  viewer.html
v8-recorder/docs/: QUICKSTART.md  (+3 more)
(+120 files in other folders)
